--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,5 +5,10 @@
     "command": "python",
     "isShellCommand": true,
     "args": ["${file}"],
-    "showOutput": "always"
+    "showOutput": "always",
+    "options": {
+        "env":{
+            "PYTHONIOENCODING": "UTF-8"
+        }
+    }
 }
